# paxos

./: CMakeLists.txt  Dockerfile  Findrpclib.cmake  config.json  config1.json  deploy.sh  main.cpp
include/paxos/: local_end.hpp  paxos.hpp  remote_end.hpp
src/: client.cpp  local_end.cpp  main.cpp  paxos.cpp  remote_end.cpp
